...
                    selected: creativity,
                  ),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.03),
                  CustomInterestsCard(
                    buttonColor: const Color(0xffffffff),
                    buttonBorderRadius: BorderRadius.circular(15),
                    buttonText: "Travel",
                    svgPath: 'assets/travel.svg',
                    buttonFunction: () {
                      setState(() {
                        if (!travel) {
                          travel = !travel;
                          interestIndex = 1;
...
                      });
                    },
                    selected: motivation,
                  ),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.08),
                  CustomTextButton(
                    key: const Key('nextScrapbookOption3'),
                    buttonBorderRadius: BorderRadius.circular(30),
                    buttonFunction: () {
                      if (interestIndex != -1) {
                        Navigator.push(
                          context,
                          MaterialPageRoute(
...
