...
                const SizedBox(height: 15),
                subheader("Tag"),
                const SizedBox(height: 5),
                CustomSelectionTab1(
                  selection: tag,
                  selection1: "Factual",
                  selecion2: "Personal",
                  path1: "assets/images/factual.png",
                  path2: "assets/images/personal.png",
                  func1: () {
                    if (tag == false) {
                      setState(() {
                        tag = true;
...
                        ],
                      ),
                type == true
                    ? const SizedBox(height: 30)
                    : const SizedBox(height: 150),
                CustomTextButton(
                  key: const Key('nextScrapbookOption2'),
                  buttonBorderRadius: BorderRadius.circular(30),
                  buttonFunction: () {
                    Navigator.push(
                      context,
                      MaterialPageRoute(
                        builder: (context) => CreateScrapbookPage3(
...
