...
                    MaterialPageRoute(builder: (context) => NavBar()),
                  );
                }),
                CustomHeader(headerText: "Settings"),
                const SizedBox(height: 30),
                CustomMenuItem(
                  key: const Key('editProfileButton'),
                  svgPath: "assets/edit_profile.svg",
                  text: "Edit Profile",
                  buttonFunction: () {
                    Navigator.push(
                      context,
                      MaterialPageRoute(
...
